# claude-booping

./: .booping-project  .gitignore  404.html  CLAUDE.md  PRD.md  README.md  index.html  justfile  mkdocs.yml  search.html  sitemap.xml
booping-python/: pyproject.toml
booping-python/src/booping/: cli.py  rendering.py  tools.py
booping-python/src/booping/commands/: build.py  debug.py  render.py  render_sprints.py
booping-python/src/booping/context/: __init__.py  _yaml.py  agent.py  config.py  extra_instructions.py  lesson.py  plan.py  plan_template.py  project.py  retro.py  review_template.py  skill.py
booping-python/tests/: helpers.py  rendering_test.py
booping-python/tests/__fixtures__/plugin-root-minimal/agents/: booping-developer.md  booping-researcher.md  sample-agent.md
booping-python/tests/__fixtures__/plugin-root-minimal/src/: config.yaml
booping-python/tests/__fixtures__/vault-empty/: .gitkeep
booping-python/tests/__fixtures__/vault-full/: .booping
booping-python/tests/__fixtures__/vault-full/_booping/: agent_booping-developer.md  skill_groom.md
booping-python/tests/__fixtures__/vault-full/lessons/: 2026-01-20-prefer-explicit-over-implicit.md  test-lesson.md
booping-python/tests/__fixtures__/vault-full/plan_templates/: api-endpoint.md  custom-template.md
booping-python/tests/__fixtures__/vault-full/plans/: 20260101-add-search-feature.md  20260115-fix-login-timeout.md  20260401-add-user-auth.md  20260415-fix-login-bug.md
booping-python/tests/__fixtures__/vault-minimal/: .booping
booping-python/tests/__fixtures__/vault-with-config-override/: .booping  config.yaml
booping-python/tests/commands/: build_test.py  render_sprints_test.py  render_test.py
booping-python/tests/context/: agent_test.py  assemble_test.py  config_test.py  extra_instructions_test.py  lesson_test.py  plan_template_test.py  plan_test.py  project_test.py  retro_test.py  review_template_test.py  skill_test.py
booping-python/tests/templates/: test_extra_instructions.py  test_lessons.py
(+196 files in other folders)
