[project]
name = "booping"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "jinja2",
    "pyyaml",
    "pydantic",
]

[project.scripts]
booping = "booping.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/booping"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-snapshot",
    "ruff",
    "basedpyright",
]
docs = [
    "mkdocs",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
include = ["src", "tests"]
extraPaths = ["src"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
